[gd_scene load_steps=41 format=2]

[ext_resource path="res://Cenas/Arquetipos/Arquetipos.gd" type="Script" id=1]
[ext_resource path="res://Elementos_Jogo/arquetipos-01.png" type="Texture" id=2]
[ext_resource path="res://Elementos_Jogo/cartas Arquetipos/heroi.png" type="Texture" id=3]
[ext_resource path="res://Fonts/FontText_Arq.tres" type="DynamicFont" id=4]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Normal/normal-23.png" type="Texture" id=5]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Ativo/ativo-23.png" type="Texture" id=6]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Hover/hover-23.png" type="Texture" id=7]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/desativado/desativado-23.png" type="Texture" id=8]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Normal/normal-29.png" type="Texture" id=9]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Ativo/ativo-29.png" type="Texture" id=10]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Hover/hover-29.png" type="Texture" id=11]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/desativado/desativado-29.png" type="Texture" id=12]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Normal/normal-25.png" type="Texture" id=13]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Ativo/ativo-25.png" type="Texture" id=14]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Hover/hover-25.png" type="Texture" id=15]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/desativado/desativado-25.png" type="Texture" id=16]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Normal/normal-26.png" type="Texture" id=17]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Ativo/ativo-26.png" type="Texture" id=18]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Hover/hover-26.png" type="Texture" id=19]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/desativado/desativado-26.png" type="Texture" id=20]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Normal/normal-30.png" type="Texture" id=21]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Ativo/ativo-30.png" type="Texture" id=22]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Hover/hover-30.png" type="Texture" id=23]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/desativado/desativado-30.png" type="Texture" id=24]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Normal/normal-27.png" type="Texture" id=25]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Ativo/ativo-27.png" type="Texture" id=26]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Hover/hover-27.png" type="Texture" id=27]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/desativado/desativado-27.png" type="Texture" id=28]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Normal/normal-24.png" type="Texture" id=29]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Ativo/ativo-24.png" type="Texture" id=30]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Hover/hover-24.png" type="Texture" id=31]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/desativado/desativado-24.png" type="Texture" id=32]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Normal/normal-28.png" type="Texture" id=33]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Ativo/ativo-28.png" type="Texture" id=34]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/Hover/hover-28.png" type="Texture" id=35]
[ext_resource path="res://Elementos_Jogo/Botoes Arquetipos/desativado/desativado-28.png" type="Texture" id=36]
[ext_resource path="res://Fonts/RobotoSlab-Regular.ttf" type="DynamicFontData" id=37]

[sub_resource type="DynamicFont" id=1]

size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 37 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="InputEventKey" id=2]

device = 0
alt = false
shift = false
control = false
meta = false
command = false
pressed = false
scancode = 16777217
unicode = 0
echo = false

[sub_resource type="ShortCut" id=3]

shortcut = SubResource( 2 )

[node name="Arquetipos" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 270.394 ],
"_edit_vertical_guides_": [ 221.792, 330.503 ]
}

[node name="Fundo" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Imagem_Arquetipo" type="Sprite" parent="." index="1"]

position = Vector2( 485.735, 188.173 )
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="skipText" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Texto_Arquetipo" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 889.0
margin_top = 193.0
margin_right = 1156.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 131, 29 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
align = 3
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Timer_text_a" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = false

[node name="Heroi" type="TextureButton" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 114.0
margin_top = 199.0
margin_right = 185.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Herói"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 8 )
_sections_unfolded = [ "Hint", "Rect", "Textures" ]

[node name="Mentor" type="TextureButton" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 331.0
margin_top = 200.0
margin_right = 402.0
margin_bottom = 271.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Mentor"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
texture_disabled = ExtResource( 12 )
_sections_unfolded = [ "Hint", "Rect", "Textures" ]

[node name="Arauto" type="TextureButton" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 222.0
margin_top = 200.0
margin_right = 293.0
margin_bottom = 271.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Arauto"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )
texture_disabled = ExtResource( 16 )
_sections_unfolded = [ "Hint", "Rect", "Textures" ]

[node name="Guardiao" type="TextureButton" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 113.0
margin_top = 300.0
margin_right = 184.0
margin_bottom = 371.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Guardião"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 19 )
texture_disabled = ExtResource( 20 )
_sections_unfolded = [ "Hint", "Rect", "Textures" ]

[node name="Camaleao" type="TextureButton" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 223.0
margin_top = 299.0
margin_right = 294.0
margin_bottom = 370.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Camaleão"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 23 )
texture_disabled = ExtResource( 24 )
_sections_unfolded = [ "Hint", "Rect", "Textures" ]

[node name="Aliados" type="TextureButton" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 331.0
margin_top = 300.0
margin_right = 402.0
margin_bottom = 371.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Aliados"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 26 )
texture_hover = ExtResource( 27 )
texture_disabled = ExtResource( 28 )
_sections_unfolded = [ "Hint", "Rect", "Textures" ]

[node name="Sombra" type="TextureButton" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 113.0
margin_top = 400.0
margin_right = 184.0
margin_bottom = 471.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Sombra"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 30 )
texture_hover = ExtResource( 31 )
texture_disabled = ExtResource( 32 )
_sections_unfolded = [ "Hint", "Rect", "Textures" ]

[node name="Picaro" type="TextureButton" parent="." index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 222.0
margin_top = 400.0
margin_right = 293.0
margin_bottom = 471.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Pícaro"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 33 )
texture_pressed = ExtResource( 34 )
texture_hover = ExtResource( 35 )
texture_disabled = ExtResource( 36 )
_sections_unfolded = [ "Hint", "Rect", "Textures" ]

[node name="Voltar" type="Button" parent="." index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 999.0
margin_top = 644.0
margin_right = 1168.0
margin_bottom = 683.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Voltar para o Menu Principal"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = SubResource( 3 )
group = null
text = "Voltar"
flat = false
align = 1
_sections_unfolded = [ "Hint", "Mouse", "custom_fonts" ]

[connection signal="pressed" from="skipText" to="." method="_on_skipText_pressed"]

[connection signal="timeout" from="Timer_text_a" to="." method="_on_Timer_text_a_timeout"]

[connection signal="pressed" from="Heroi" to="." method="_on_Heroi_pressed"]

[connection signal="pressed" from="Mentor" to="." method="_on_Mentor_pressed"]

[connection signal="pressed" from="Arauto" to="." method="_on_Arauto_pressed"]

[connection signal="pressed" from="Guardiao" to="." method="_on_Guardiao_pressed"]

[connection signal="pressed" from="Camaleao" to="." method="_on_Camaleao_pressed"]

[connection signal="pressed" from="Aliados" to="." method="_on_Aliados_pressed"]

[connection signal="pressed" from="Sombra" to="." method="_on_Sombra_pressed"]

[connection signal="pressed" from="Picaro" to="." method="_on_Picaro_pressed"]

[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]


